--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 <h2 id="publications">Publications</h2>
 <ul>
 <li>
-<p><strong>Example-based spatial pattern matching</strong>
-Yue Chen, <strong>Kaiyu Feng</strong>, Gao Cong, Han Mao Kiah
-<em>Proceeding of the VLDB Endowment, 2022</em></p>
+<p><strong>Example-based spatial pattern matching</strong></p>
+<p>Yue Chen, <strong>Kaiyu Feng</strong>, Gao Cong, Han Mao Kiah</p>
+<p><em>Proceeding of the VLDB Endowment, 2022</em></p>
 </li>
 <li>
-<p><strong>ABC: Attribute bipartite co-clustering</strong>
-Junghoon Kim, <strong>Kaiyu Feng</strong>, Gao Cong, Diwen Zhu, Wenyuan Yu, Chunyan Miao
-<em>Proceeding of the VLDB Endowment, 2022</em></p>
+<p><strong>ABC: Attribute bipartite co-clustering</strong></p>
+<p>Junghoon Kim, <strong>Kaiyu Feng</strong>, Gao Cong, Diwen Zhu, Wenyuan Yu, Chunyan Miao</p>
+<p><em>Proceeding of the VLDB Endowment, 2022</em></p>
 </li>
 <li>
 <p><strong>A knowledge-enriched ensemble method for word embedding and multi-sense embedding</strong></p>
